--- a/app/src/main/res/layout/activity_image_slider.xml
+++ b/app/src/main/res/layout/activity_image_slider.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,10 +8,21 @@
     android:gravity="center"
     tools:context=".ui.ImageSliderActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Image Slider Page">
-    </TextView>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/image_slider_viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_centerInParent="true" />
 
-</LinearLayout>
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/image_slider_tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:tabGravity="center"
+        app:tabIndicatorHeight="0dp"
+        android:layout_centerInParent="true"
+        app:tabMaxWidth="10dp"
+        app:tabBackground="@drawable/tab_ticket_flight_selector"
+        android:layout_below="@id/image_slider_viewPager" />
+
+</RelativeLayout>
